tests/fails/f10.t

terra foo()
    var a  = [ int[2] ]({0, a = 3}).a
end
foo()
